@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Thu Dec 07 01:28:37 CET 2006
-build.number=543
+#Fri Dec 08 16:53:02 CET 2006
+build.number=544
